# wealth-advisor-hub

./: .env.example  .gitignore  LICENSE  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.impeccable/: config.json
analytics/: Dockerfile  main.py  requirements.txt  seed.py  seed_conversations.py
backend/: main.py  requirements.txt
db/: init.sql
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  architecture.md  credit-management.md
docs/flows/: COCKPIT_FLOWS.md  SOFIA_FLOW.md
docs/specs/: SPEC-001-advisor-agent.md  SPEC-002-campaign.md  SPEC-002-multilingual.md  SPEC-003-outbound.md  SPEC-006-elevenlabs-agent.md  SPEC-007-cockpit-v2.md  SPEC-008-conversations-and-audio.md
front/: .dockerignore  Cockpit Assessor.dc.html  Cockpit B.dc.html  Dockerfile  cockpit.html  index.html
scripts/: demo.py  generate_audio.py  setup_agent.py
setup/: compliance_guide.txt  create_agent.py
src/elevenlabs_fsi/agent/: advisor_agent.py  knowledge_base.py
src/elevenlabs_fsi/budget/: estimator.py  tracker.py
tests/: conftest.py  test_01_backend_current.py  test_02_frontend_current.py  test_03_postgres.py  test_04_analytics.py  test_05_backend_pg_integration.py  test_06_data_integration.py  test_07_conversations.py
tests/integration/: test_advisor_flow.py
tests/unit/: test_advisor_agent.py  test_budget_estimator.py  test_budget_tracker.py  test_knowledge_base.py
